log
Sun, May 18, 2025  4:28:26 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sun, May 18, 2025  4:29:33 AM: 
 sudoku.c | 60 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 58 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
8463dc1
Sun, May 18, 2025  4:30:19 AM: 
 sudoku.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:128:11: error: implicit declaration of function 'isEmpty' [-Werror=implicit-function-declaration]
   while (!isEmpty(stack)) {
           ^~~~~~~
cc1.exe: all warnings being treated as errors
90f8cc8
